[package]
name = "bevy-egui-kbgp"
version = "0.1.0"
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/bevy-egui-kbgp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", default-features = false }
bevy_egui = "0.12"

[dev-dependencies]
bevy = { version = "0.6.1", default-features = false, features = ["bevy_gilrs"] }
