[package]
name = "bevy-egui-kbgp"
description = "Better keyboard and gamepad story for egui in Bevy"
version = "0.18.0"
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/bevy-egui-kbgp"
documentation = "https://docs.rs/bevy-egui-kbgp"
readme = "README.md"
keywords = ["bevy", "egui", "input"]
categories = ["game-engines", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.13", default-features = false }
bevy_egui = { version = "^0.26", default-features = false }

[dev-dependencies]
bevy = { version = "^0.13", default-features = false, features = ["bevy_gilrs", "x11"] }
bevy_egui = { version = "^0.26", default-features = false, features = ["default_fonts", "render"] }
